--- a/content/dergi/sayi-6/malzeme-seramik/index.html
+++ b/content/dergi/sayi-6/malzeme-seramik/index.html
@@ -45,7 +45,7 @@ tags= ["ana sayfa", "dergi"]
             şeklini elle oluşturacaktır. Bu, malzemenin kolay deformasyonu
             nedeniyle herhangi bir geometrik şeklin oluşturulabilmesini sağlar.
             Adım 3: Birleştirme İstenilen yapıya göre oluşturulan sap vb.
-            birleşmesi gereken parçalar, direkt temas töntemi kullanılarak çamur
+            birleşmesi gereken parçalar, direkt temas yöntemi kullanılarak çamur
             çanağına bağlanacaktır. Bu yöntem, iki parçayı birbirine
             karıştırmayı ve ardından bir arada tutmak için sirkeyi ve suyu
             yapıştırıcı olarak kullanmayı gerektirir. Adım 4: Ateşleme Bu
