dieter-rams-less

--- a/content/dergi/sayi-6/dieter-rams/index.html
+++ b/content/dergi/sayi-6/dieter-rams/index.html
@@ -287,9 +287,17 @@ tags= ["ana sayfa", "dergi"]
          >}}
       </div>
    </div>
+   <hr>
+</div>
 
+<div class="container-fluid">
+   <div class="text-center">
+   {{<img src="dieter-rams-less-but-better_marcin_szmidt.jpg" alt="Marcin Szmidt - Less but Better">}}
+</div>
+
+</div>
+<div class="container">
    <hr >
-
    <h2>İYİ TASARIM İLKELERİ</h2>
    <div class="row">
       <div class="col-md-6">
@@ -383,6 +391,7 @@ tags= ["ana sayfa", "dergi"]
             referrerpolicy="no-referrer"
             alt="Braun KF20 Aromaster, Florian Seiffert, 1972. Braun KM3 Mikser, Gerd Alfred Muller, 1957. Braun ABW4 Duvar Saati, Dietrich Lubs, 1981. Braun Citromatic Meyve Sıkacağı 4155, Dieter Rams, 1972."
          >}}
+
          <p>
             Braun KF20 Aromaster, Florian Seiffert, 1972.
             <br >
