--- a/content/dergi/sayi-6/dieter-rams/index.html
+++ b/content/dergi/sayi-6/dieter-rams/index.html
@@ -293,8 +293,8 @@ tags= ["ana sayfa", "dergi"]
 <div class="container-fluid">
    <div class="text-center">
    {{<img src="dieter-rams-less-but-better_marcin_szmidt.jpg" alt="Marcin Szmidt - Less but Better">}}
-</div>
-
+   <small>Marcin Szmidt - Less but Better</small>
+   </div>
 </div>
 <div class="container">
    <hr >
