--- a/content/dergi/sayi-6/dieter-rams/index.html
+++ b/content/dergi/sayi-6/dieter-rams/index.html
@@ -170,11 +170,11 @@ tags= ["ana sayfa", "dergi"]
          {{<img
             src="dieter-rams-sk4-fonogram.jpg"
             referrerpolicy="no-referrer"
-            alt="SK4 Fonogram- Dönüştürücü ve Alıcı, 1956. Malzemesi boyalı metal, plastik ve kül."
+            alt="SK4 Fonogram- Dönüştürücü ve Alıcı, 1956. Malzemesi boyalı metal, plastik ve dişbudak ağacı."
          >}}
          <p>
             SK4 Fonogram- Dönüştürücü ve Alıcı, 1956. Malzemesi boyalı metal,
-            plastik ve kül.
+            plastik ve dişbudak ağacı.
          </p>
       </div>
       <div class="col-md-3">
