av-min-js, mini kapak

--- a/content/dergi/sayi-2-kapak.html
+++ b/content/dergi/sayi-2-kapak.html
@@ -5,7 +5,7 @@ seotitle = "Endüstriyel Tasarım Dergisinin 2. Sayısı Markut Sayı: 2"
 description="Markut derginin yeni sayısı 2. sayı çıktı. Endüstriyel tasarım dergimizden 2. sayımızı online ücretsiz okuyabilirsiniz."
 aciklama="\"Bir felsefem yok, en sevdiğim şey stüdyoda oturmak.\""
 date = "2020-10-01"
-thumb="/img/markut-ekim-sayi-2.jpg"
+thumb="/img/markut-ekim-sayi-2-mini.jpg"
 yazar=["Markut"]
 sayi=[
 "02"
