instagramda takip et animasyon, genel görünüş

--- a/content/dergi/sayi-6/dieter-rams/index.html
+++ b/content/dergi/sayi-6/dieter-rams/index.html
@@ -293,7 +293,7 @@ tags= ["ana sayfa", "dergi"]
 <div class="container-fluid">
    <div class="text-center">
    {{<img src="dieter-rams-less-but-better_marcin_szmidt.jpg" alt="Marcin Szmidt - Less but Better">}}
-   <small>Marcin Szmidt - Less but Better</small>
+   <br><small>Marcin Szmidt - Less but Better</small>
    </div>
 </div>
 <div class="container">
@@ -310,16 +310,14 @@ tags= ["ana sayfa", "dergi"]
          </p>
          <ol start="">
             <li>
-               &quot;
-               <strong>Yenilikçidir</strong>
+               &quot;<strong>Yenilikçidir</strong>
                - İlerleme olanakları hiçbir şekilde tükenmez. Teknolojik gelişme
                her zaman özgün tasarımlar için yeni fırsatlar sunmaktadır. Ancak
                yaratıcı tasarım her zaman gelişen teknolojiyle birlikte gelişir
                ve asla kendi başına bir son olamaz.&quot;
             </li>
             <li>
-               &quot;
-               <strong>Bir ürünü faydalı kılandır</strong>
+               &quot;<strong>Bir ürünü faydalı kılandır</strong>
                - Bir ürün kullanılmak üzere satın alınır. Sadece işlevsel değil,
                aynı zamanda psikolojik ve estetik kriterleri de karşılamak
                zorundadır. İyi tasarım, bir ürünün yararlılığını vurgularken,
@@ -327,58 +325,50 @@ tags= ["ana sayfa", "dergi"]
                eder.&quot;
             </li>
             <li>
-               &quot;
-               <strong>Estetiktir</strong>
+               &quot;<strong>Estetiktir</strong>
                - Bir ürünün estetik kalitesi, kullanışlılığının ayrılmaz bir
                parçasıdır çünkü her gün kullanılan ürünler insanların benlikleri
                ve refahları üzerinde bir etkiye sahiptir. Ancak sadece iyi icra
                edilen nesneler güzel olabilir.&quot;
             </li>
             <li>
-               &quot;
-               <strong>Bir ürünü anlaşılabilir kılandır</strong>
+               &quot;<strong>Bir ürünü anlaşılabilir kılandır</strong>
                - Ürünün yapısını netleştirir. Daha da iyisi ürünü konuşturur. En
                iyi ihtimalle kendini açıklayıcıdır.&quot;
             </li>
             <li>
-               &quot;
-               <strong>Mütevazidir</strong>
+               &quot;<strong>Mütevazidir</strong>
                - Bir amaca ulaşan ürünler alet gibidir. Bunlar ne dekoratif
                nesneler ne de sanat eserleridir. Bu nedenle tasarımları,
                kullanıcının kendini ifade etmesine yer açmak için hem nötr hem
                de kısıtlanmış olmalıdır.&quot;
             </li>
             <li>
-               &quot;
-               <strong>Dürüsttür</strong>
+               &quot;<strong>Dürüsttür</strong>
                - İyi tasarım bir ürünün gerçekte olduğundan daha yenilikçi,
                güçlü veya değerli görünmesini sağlamaz. Tüketiciyi, muhafaza
                edilemeyecek vaatlerle manipüle etmeye çalışmaz.&quot;
             </li>
             <li>
-               &quot;
-               <strong>Uzun ömürlüdür</strong>
+               &quot;<strong>Uzun ömürlüdür</strong>
                - Moda olmaktan kaçınır ve bu nedenle asla antika görünmez. Moda
                tasarımından farklı olarak, günümüzün atılabilir toplumunda bile
                uzun yıllar sürer.&quot;
             </li>
             <li>
-               &quot;
-               <strong>En ince ayrıntısına kadar eksiksizdir</strong>
+               &quot; <strong>En ince ayrıntısına kadar eksiksizdir</strong>
                - Hiçbir şey keyfi olmamalıdır veya şansa bırakılmamalıdır.
                Tasarım sürecindeki özen ve doğruluk tüketiciye saygı
                gösterir.&quot;
             </li>
             <li>
-               &quot;
-               <strong>Çevre dostudur</strong>
+               &quot;<strong>Çevre dostudur</strong>
                - Tasarım çevrenin korunmasına önemli bir katkı sağlar.
                Kaynakları korur ve ürünün yaşam döngüsü boyunca fiziksel ve
                görsel kirliliği en aza indirir.&quot;
             </li>
             <li>
-               &quot;
-               <strong>Mümkün olduğunca az tasarımdır</strong>
+               &quot;<strong>Mümkün olduğunca az tasarımdır</strong>
                - Daha az, ama daha iyi - çünkü temel yönlere odaklanır ve
                ürünler zorunlu olmayanlarla yükümlü değildir. Saflığa ve
                basitliğe geri dön.&quot;
@@ -476,7 +466,7 @@ tags= ["ana sayfa", "dergi"]
          nasıl kullanılacağını biliyordunuz.&quot;
          <br >
          <br >
-         -Jonathan Ive, Dieter Rams tasarımları üzerine.
+          - Jonathan Ive, Dieter Rams tasarımları üzerine.
       </p>
    </blockquote>
 </div>
