--- a/content/dergi/sayi-6/malzeme-seramik/index.html
+++ b/content/dergi/sayi-6/malzeme-seramik/index.html
@@ -37,18 +37,19 @@ tags= ["ana sayfa", "dergi"]
       </div>
       <div class="col-md-6">
          <p>
-            Adım 1: Kilin Kesilmesi Bu adım sırasında, düşük veya yüksek alevli
+           <b>Adım 1:</b>  Kilin Kesilmesi Bu adım sırasında, düşük veya yüksek alevli
             belirli bir kil türü seçilir ve kalıplama işlemi için doğru miktarda
-            çamur elde etmek için kesilir. Adım 2: Yuvarlama Bu adım sırasında
+            çamur elde etmek için kesilir. <br><b> Adım 2:</b> Yuvarlama Bu adım sırasında
             kil, bir çömlek çarkına yerleştirilir. Bir çömlekçi daha sonra çanak
             çömlek çarkını döndürerek ve çamuru kalıplayarak istenen ürünün
             şeklini elle oluşturacaktır. Bu, malzemenin kolay deformasyonu
             nedeniyle herhangi bir geometrik şeklin oluşturulabilmesini sağlar.
-            Adım 3: Birleştirme İstenilen yapıya göre oluşturulan sap vb.
+            <br><b>Adım 3:</b> Birleştirme İstenilen yapıya göre oluşturulan sap vb.
             birleşmesi gereken parçalar, direkt temas yöntemi kullanılarak çamur
             çanağına bağlanacaktır. Bu yöntem, iki parçayı birbirine
             karıştırmayı ve ardından bir arada tutmak için sirkeyi ve suyu
-            yapıştırıcı olarak kullanmayı gerektirir. Adım 4: Ateşleme Bu
+            yapıştırıcı olarak kullanmayı gerektirir.
+            <br><b>Adım 4:</b> Ateşleme Bu
             aşamada oluşturulan ürün, istenen şeye bağlı olarak belirli
             özellikler oluşturmak için yüksek sıcaklıklarda ısıtılacaktır.
          </p>
@@ -60,10 +61,11 @@ tags= ["ana sayfa", "dergi"]
    </div>
 
    <hr >
-   <h1>Kayma Döküm Yöntemi (Slipcasting)</h1>
+
    <div class="row">
+      <h1>Kayma Döküm Yöntemi (Slipcasting)</h1>
       <p>
-         Slipcasting veya slip döküm , çanak çömlek ve diğer seramikler için ,
+         Slipcasting veya slip döküm, çanak çömlek ve diğer seramikler için,
          özellikle bir tekerlek üzerinde kolayca yapılamayan şekiller için bir
          seramik şekillendirme tekniğidir. Bu yöntem, kahve fincanları gibi kısa
          sürede büyük miktarlarda üretilmesi gereken daha endüstriyel işlemler
@@ -76,14 +78,14 @@ tags= ["ana sayfa", "dergi"]
             alt="Kayma Döküm Yöntemi (Slipcasting)"
          >}}
       </div>
-      <div class="col-md-6">
-         <p>Adım 1: Prototip ve Kalıp Oluşturma</p>
+      <div class="col-md-6"><br>
+         <b>Adım 1: Prototip ve Kalıp Oluşturma</b>
          <p>
             Prototip, alçı veya plastikten, zarar görmeyeceği için tercih edilen
             seçenek olarak plastik ile oluşturulur. Prototip, elle yapılmış veya
             bir malzeme bloğuna oyulmuş olabilir.
          </p>
-         <p>Adım 2: Kayma Döküm</p>
+         <b>Adım 2: Kayma Döküm</b>
          <p>
             Taş, çanak çömlek ve porselen malzemeler kil sıvı hale gelene kadar
             su ile seyreltilir. Bu sıvı daha sonra alçı kalıplara dökülür. Bu,
@@ -95,7 +97,7 @@ tags= ["ana sayfa", "dergi"]
       </div>
    </div>
 
-   <p>Adım 3: Ateşleme</p>
+   <b>Adım 3: Ateşleme</b>
    <p>
       Sertleştirilmiş kil daha sonra, kullanılan özel malzemelere bağlı olarak
       1064-1416 ℃ arasında değişen pişirme sıcaklıklarında kahve fincanlarını
@@ -103,7 +105,7 @@ tags= ["ana sayfa", "dergi"]
       yukarıdaki Çömlekçilik Çarkı Yöntemi ile aynıdır. Bu adım 2 ila 12 saat
       sürecektir.
    </p>
-   <p>Adım 4: Sırlama ve İkinci Pişirme</p>
+   <b>Adım 4: Sırlama ve İkinci Pişirme</b>
    <p>
       İlk pişirme adımından sonra kahve fincanları son derece sıcaktır ve
       soğumaya bırakılacaktır. Soğuduktan sonra sırlanır bu da fincana renk ve
