footer b. cdn iptal kaynak butonu sorunu, sayfa css

--- a/content/dergi/sayi-5/minimalizm/index.html
+++ b/content/dergi/sayi-5/minimalizm/index.html
@@ -22,9 +22,8 @@ tags= ["ana sayfa", "dergi"]
 </h3>
 <div class="row">
     <div class="col-md-6"><p>
-        Minimalizm sözcüğü Fransızca'dan gelen “
-        <strong>minimum</strong>
-        ” sözcüğünden türemiştir. Minimumun kelime anlamı ise,
+        Minimalizm sözcüğü Fransızca'dan gelen “<strong>minimum</strong>”
+        sözcüğünden türemiştir. Minimumun kelime anlamı ise,
         <strong>
            “bir şey için gerekli en az veya en küçük miktar (derece, nicelik)”
         </strong>
