dieter rams ul li ve bir kaç değişiklik

--- a/content/dergi/sayi-3-3byazici.html
+++ b/content/dergi/sayi-3-3byazici.html
@@ -438,7 +438,7 @@ tags= [
 </div>
 <div class="container">
   <small>
-    <p class="bg-grey p-md-5 m-md-5">
+    <p class="bg-grey p-md-5 m-md-5 p-2">
       🌐 Modelleme yapmanıza gerek kalmadan 3B yazıcıyla üretmek için gerekli
       şablonları açık kaynaklı internet sitelerinde bulabilirsiniz.
     </p>
