--- a/content/dergi/sayi-6/bakalit/index.html
+++ b/content/dergi/sayi-6/bakalit/index.html
@@ -499,7 +499,7 @@ tags= ["ana sayfa", "dergi"]
 </div>
 
 <div class="container mt-5">
-   <div class="bg-grey p-md-5">
+   <div class="bg-grey p-md-5 p-2">
       <p>
          Makine Çağı&#39;nın estetik nitelikleri ancak daha sonra takdir
          edildi. Büyük tasarımcılar, yeni <em>streamline tasarımları</em>nın
