--- a/content/dergi/sayi-6/dieter-rams/index.html
+++ b/content/dergi/sayi-6/dieter-rams/index.html
@@ -13,76 +13,61 @@ tags= ["ana sayfa", "dergi"]
 +++
 
 <div class="container">
-   <h2>HAYATI</h2>
+   <h2>Dieter Rams'ın Hayatı</h2>
    <div class="row">
       <div class="col-md-6">
+         <p>
+            Dieter Rams, 1932 yılında Wiesbaden, Almanya&#39;da doğdu. Marangoz
+            olan büyükbabasından etkilenerek 1947 yılında Wiesbaden Sanat
+            Okulu&#39;nda mimari ve iç mimari dekorasyon eğitimi almaya başladı.
+            İkinci yılında eğitimine ara vererek teoriden uzaklaşıp pratik
+            deneyim kazanmak istedi. Rams’ın marangozluk için aldığı erken
+            ödüller, 1950&#39;lerin başında Almanya yeniden inşa edildiğinden
+            mimar olarak eğitim görmesine yol açtı. 1948 yılında Wiesbaden Sanat
+            Okulu&#39;nda çalışmaya devam etti ve 1953&#39;te onur derecesi ile
+            mezun oldu ve daha sonra Frankfurt merkezli
+            mimar Otto Apel&#39;le çalışmaya başladı.
+         </p> <br>
+         <p>
+            1955 yılında Alman elektrik ürünleri şirketi
+            <em>Braun</em>
+            &#39;a Erwin ve Artur Braun tarafından şirketin iç mekanlarını
+            modernleştirme misyonuyla alındı. Braun o dönemlerde devrim
+            niteliğinde elektrikli ürünler tasarlıyor ve üretiyordu. Rams, bu
+            dönemde Ulm Tasarım Okulu -Bauhaus ekolü- hocalarından
+            Hans Gugelot, Fritz Eichler ve Otl Aicher ile birlikte birçok
+            projede çalıştı.
+         </p> <br>
+         <p>
+            23 yaşındayken Braun&#39;daki ilk yılında, şirketteki yeni iç
+            mekanlar için önerilerinin bir taslağını sundu. Duvara monte edilmiş
+            raylı raf ve çekmece sistemi olan depolama sistemi ilk fikri olarak
+            görülebilir.
+         </p> <br>
+         <p>
+            Becerileri doğrultusunda ürün tasarımına dahil oldu. 1961-1995
+            yılları arasında Braun&#39;un tasarım başkanı olarak çalıştı. İlk
+            olarak PA1 projektörü tasarladı. Tasarladığı ürünlerin çoğu, ET
+            hesap makinesi serisi de dahil olmak üzere yüzyılın ortalarında
+            modern ikonlar haline geldi.
+         </p> <br>
+         <p>
+            Rams Braun&#39;da çalışmaya devam ettiği 1959 yılında aynı zamanda
+            Niels Vitsoe ve Otto Zapf için mobilya tasarlamaya başladı. Bir yıl
+            sonra 606 Evrensel Raf Sistemi piyasaya sürüldü.
+         </p>
          <ul>
             <li>
-               <p>
-                  Dieter Rams, 1932 yılında Wiesbaden, Almanya&#39;da doğdu.
-                  Marangoz olan büyükbabasından etkilenerek 1947 yılında
-                  Wiesbaden Sanat Okulu&#39;nda mimari ve iç mimari dekorasyon
-                  eğitimi almaya başladı. İkinci yılında eğitimine ara vererek
-                  teoriden uzaklaşıp pratik deneyim kazanmak istedi.
-                  Rams’ın marangozluk için aldığı erken ödüller, 1950&#39;lerin
-                  başında Almanya yeniden inşa edildiğinden mimar olarak eğitim
-                  görmesine yol açtı. 1948 yılında Wiesbaden Sanat Okulu&#39;nda
-                  çalışmaya devam etti ve 1953&#39;te onur derecesi ile mezun
-                  oldu ve daha sonra Frankfurt merkezli
-                  mimar Otto Apel&#39;le çalışmaya başladı.
-               </p>
-            </li>
-            <li>
-               <p>
-                  1955 yılında Alman elektrik ürünleri şirketi
-                  <em>Braun</em>
-                  &#39;a Erwin ve Artur Braun tarafından şirketin iç mekanlarını
-                  modernleştirme misyonuyla alındı. Braun o dönemlerde devrim
-                  niteliğinde elektrikli ürünler tasarlıyor ve üretiyordu. Rams,
-                  bu dönemde Ulm Tasarım Okulu -Bauhaus ekolü- hocalarından
-                  Hans Gugelot, Fritz Eichler ve Otl Aicher ile birlikte birçok
-                  projede çalıştı.
-               </p>
-            </li>
-            <li>
-               <p>
-                  23 yaşındayken Braun&#39;daki ilk yılında, şirketteki yeni iç
-                  mekanlar için önerilerinin bir taslağını sundu. Duvara monte
-                  edilmiş raylı raf ve çekmece sistemi olan depolama sistemi ilk
-                  fikri olarak görülebilir.
-               </p>
-            </li>
-            <li>
-               <p>
-                  Becerileri doğrultusunda ürün tasarımına dahil oldu. 1961-1995
-                  yılları arasında Braun&#39;un tasarım başkanı olarak çalıştı.
-                  İlk olarak PA1 projektörü tasarladı. Tasarladığı ürünlerin
-                  çoğu, ET hesap makinesi serisi de dahil olmak üzere yüzyılın
-                  ortalarında modern ikonlar haline geldi.
-               </p>
-            </li>
-            <li>
-               <p>
-                  Rams Braun&#39;da çalışmaya devam ettiği 1959 yılında aynı
-                  zamanda Niels Vitsoe ve Otto Zapf için mobilya tasarlamaya
-                  başladı. Bir yıl sonra 606 Evrensel Raf Sistemi piyasaya
-                  sürüldü.
-               </p>
-               <ul>
-                  <li>
-                     Dieter Rams&#39;in ikili kariyeri
-                     1997&#39;de Braun&#39;dan ayrılana kadar devam etti.
-                  </li>
-               </ul>
-            </li>
-            <li>
-               <p>
-                  En iyi tasarımların şirketlerce kurulan tasarım ekiplerinden
-                  elde edilebileceğine dair inancı çok kuvvetli olan Rams, bugün
-                  hala Vitsœ ile çalışmaya devam ediyor.
-               </p>
+               Dieter Rams&#39;in ikili kariyeri
+               1997&#39;de Braun&#39;dan ayrılana kadar devam etti.
             </li>
          </ul>
+
+         <p>
+            En iyi tasarımların şirketlerce kurulan tasarım ekiplerinden elde
+            edilebileceğine dair inancı çok kuvvetli olan Rams, bugün
+            hala Vitsœ ile çalışmaya devam ediyor.
+         </p>
       </div>
       <div class="col-md-6">
          {{<img
@@ -101,7 +86,7 @@ tags= ["ana sayfa", "dergi"]
    </div>
    <hr >
 
-   <p class="bg-grey p-md-5">
+   <p class="bg-grey p-md-5 p-2">
       Vitra Design Museum&#39;da Dieter Rams Modular World sergisinde
       Rams&#39;in çoğu -içinde 606 Raf Sistemi&#39;nin de bulunduğu- İngiliz
       mobilya firması Vitsoe için tasarladığı mobilya tasarımlarına yer
@@ -209,7 +194,7 @@ tags= ["ana sayfa", "dergi"]
       </div>
    </div>
    <hr >
-   <h2>TASARIM FELSEFESİ</h2>
+   <h2>Dieter Rams'ın Tasarım Felsefesi</h2>
    <div class="row">
       <div class="col-md-6">
          <ul>
@@ -250,7 +235,7 @@ tags= ["ana sayfa", "dergi"]
    </div>
    <hr >
 
-   <p class="bg-grey p-md-5">
+   <p class="bg-grey p-md-5 p-2">
       &quot;Rams Tasarımının Özü&quot;
       <br >
       <strong>Daha Az ve Daha Çok (Less and More)</strong>
@@ -287,18 +272,20 @@ tags= ["ana sayfa", "dergi"]
          >}}
       </div>
    </div>
-   <hr>
+   <hr >
 </div>
 
 <div class="container-fluid">
    <div class="text-center">
-   {{<img src="dieter-rams-less-but-better_marcin_szmidt.jpg" alt="Marcin Szmidt - Less but Better">}}
-   <br><small>Marcin Szmidt - Less but Better</small>
+      {{<img
+         src="dieter-rams-less-but-better_marcin_szmidt.jpg"
+         alt="Marcin Szmidt - Less but Better"
+      >}} <br ><small>Marcin Szmidt - Less but Better</small>
    </div>
 </div>
 <div class="container">
    <hr >
-   <h2>İYİ TASARIM İLKELERİ</h2>
+   <h2>İyi Tasarım İlkeleri</h2>
    <div class="row">
       <div class="col-md-6">
          <p>
@@ -369,7 +356,7 @@ tags= ["ana sayfa", "dergi"]
             </li>
             <li>
                &quot;<strong>Mümkün olduğunca az tasarımdır</strong>
-               - Daha az, ama daha iyi - çünkü temel yönlere odaklanır ve
+               - Daha az, ama daha iyi çünkü temel yönlere odaklanır ve
                ürünler zorunlu olmayanlarla yükümlü değildir. Saflığa ve
                basitliğe geri dön.&quot;
             </li>
@@ -396,37 +383,39 @@ tags= ["ana sayfa", "dergi"]
          </p>
       </div>
    </div>
+   <div class="row">
+      <div class="col-md-12">
+         <h3>İyi Tasarım İlkelerinin Uygulanışı</h3>
+         <p>
+            Apple&#39;ın Baş Tasarım Sorumlusu (2012-2019 yılları
+            arasında) Sir Jonathan Ive, Rams&#39;in iyi tasarım ilkelerini
+            tasarladığı gövdeleri taklit etti.
+            <strong>Apple Ipod</strong>
+            tasarımlarında Rams&#39;ten örnek aldı.
+         </p>
+         <p>
+            <strong>Apple IOS3’teki hesap makinesi</strong> arayüzü
+            1987’de Dieter Rams ve Dietrich Lubs tarafından tasarlanan Braun ET
+            66 hesap makinesi görünümünü taklit eder.
+         </p>
+         <p>
+            Aynı zamanda Braun bant kaydedici TG 60 modelindeki makaradan
+            makaraya görünümü, 
+            <strong>Apple Podcast</strong>
+             (radyo) uygulamasındaki
+            <em>şu an oynatılan</em>
+            ekranında taklit edilmiş, daha sonra bu tasarım re-design ile
+            kaldırılmıştır.
+         </p>
+         <p>
+            Gary Hustwit&#39;in 2009 tarihli belgesel filmi
+            <strong>RAMS</strong>
+            &#39;de Dieter Rams, Apple Şirketi&#39;nin iyi tasarım ilkelerine
+            göre ürün tasarlayan birkaç şirketten biri olduğunu belirtiyor.
+         </p>
+      </div>
+   </div>
 
-   <h3>İyi Tasarım İlkelerinin Uygulanışı</h3>
-   <ul>
-      <li>
-         Apple&#39;ın Baş Tasarım Sorumlusu (2012-2019 yılları
-         arasında) Sir Jonathan Ive, Rams&#39;in iyi tasarım ilkelerini
-         tasarladığı gövdeleri taklit etti.
-         <strong>Apple Ipod</strong>
-         tasarımlarında Rams&#39;ten örnek aldı.
-      </li>
-      <li>
-         <strong>Apple IOS3’teki hesap makinesi</strong>
-         arayüzü 1987’de Dieter Rams ve Dietrich Lubs tarafından
-         tasarlanan Braun ET 66 hesap makinesi görünümünü taklit eder.
-      </li>
-      <li>
-         Aynı zamanda Braun bant kaydedici TG 60 modelindeki makaradan makaraya
-         görünümü, 
-         <strong>Apple Podcast</strong>
-          (radyo) uygulamasındaki
-         <em>şu an oynatılan</em>
-         ekranında taklit edilmiş, daha sonra bu tasarım re-design ile
-         kaldırılmıştır.
-      </li>
-      <li>
-         Gary Hustwit&#39;in 2009 tarihli belgesel filmi
-         <strong>RAMS</strong>
-         &#39;de Dieter Rams, Apple Şirketi&#39;nin iyi tasarım ilkelerine göre
-         ürün tasarlayan birkaç şirketten biri olduğunu belirtiyor.
-      </li>
-   </ul>
    <div class="row">
       <div class="col-md-4">
          {{<img
@@ -466,13 +455,13 @@ tags= ["ana sayfa", "dergi"]
          nasıl kullanılacağını biliyordunuz.&quot;
          <br >
          <br >
-          - Jonathan Ive, Dieter Rams tasarımları üzerine.
+         - Jonathan Ive, Dieter Rams tasarımları üzerine.
       </p>
    </blockquote>
 </div>
 <hr >
 <div class="container-fluid">
-   <h3 class="text-center">İKONİK TASARIMLARI</h3>
+   <h3 class="text-center">İkonik Tasarımları</h3>
    <div class="row">
       <div class="col-md-3">
          {{<img
@@ -548,25 +537,43 @@ tags= ["ana sayfa", "dergi"]
       <p class="display-5">Saflığa, basitliğe geri dön.</p>
    </blockquote>
    <p>
-      <a href="https://vimeo.com/ondemand/ramsfilm" target="_blank" rel="noopener noreferrer">
+      <a
+         href="https://vimeo.com/ondemand/ramsfilm"
+         target="_blank"
+         rel="noopener noreferrer"
+      >
          Watch Rams Online | Vimeo On Demand
       </a>
    </p>
 
-   <a href="https://hustwit.vhx.tv/" target="_blank" rel="noopener noreferrer">Rams</a>
+   <a href="https://hustwit.vhx.tv/" target="_blank" rel="noopener noreferrer"
+      >Rams</a
+   >
 
-   <br><br>
+   <br ><br >
 
-    <div class="row">
-        <div class="col-md-6">
-         <iframe src="https://open.spotify.com/embed/track/0qejQgJeqIOr8NliHFIr4d" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-
-        </div>
-        <div class="col-md-6">
-         <iframe src="https://open.spotify.com/embed-podcast/episode/3hRhLkKha9fI96xp4OMYSI" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-
-        </div>
-    </div>
+   <div class="row">
+      <div class="col-md-6">
+         <iframe
+            src="https://open.spotify.com/embed/track/0qejQgJeqIOr8NliHFIr4d"
+            width="100%"
+            height="380"
+            frameborder="0"
+            allowtransparency="true"
+            allow="encrypted-media"
+         ></iframe>
+      </div>
+      <div class="col-md-6">
+         <iframe
+            src="https://open.spotify.com/embed-podcast/episode/3hRhLkKha9fI96xp4OMYSI"
+            width="100%"
+            height="232"
+            frameborder="0"
+            allowtransparency="true"
+            allow="encrypted-media"
+         ></iframe>
+      </div>
+   </div>
 
    <hr >
    <div class="row">
