--- a/content/dergi/sayi-7/son.html
+++ b/content/dergi/sayi-7/son.html
@@ -9,7 +9,7 @@ sayi:
   - '07'
 sayfa: '07'
 yorum: var
-seotitle: Markut Derginin 7. Sayısı Son Sayfa
+seotitle: Markut Derginin 7. Sayısı Yorumlar
 type: sayfa
 description: Markut derginin 7. sayısına gelen yorumlar. Endüstri tasarımı bağlamında genel tasarım disiplinleriyle de ilişkili olarak içerikler üretmektedir.
 aciklama: Markut ekibinden sevgiyle...
