--- a/content/dergi/sayi-7/son.html
+++ b/content/dergi/sayi-7/son.html
@@ -14,3 +14,6 @@ type: sayfa
 description: Markut derginin 7. sayısına gelen yorumlar. Endüstri tasarımı bağlamında genel tasarım disiplinleriyle de ilişkili olarak içerikler üretmektedir.
 aciklama: Markut ekibinden sevgiyle...
 ---
+<div class="container">
+  <h3>28 Şubat 2020'de bir araya gelerek toplantılara başladığımız MARKUT ekibi 1 yaşında oldu. Bugüne kadar bizi destekleyen herkese teşekkür ederiz.</h3>
+</div>
