--- a/content/dergi/sayi-7/tatbiki-marmara-gsf/index.html
+++ b/content/dergi/sayi-7/tatbiki-marmara-gsf/index.html
@@ -446,7 +446,7 @@ tags= ["ana sayfa", "dergi"]
       olarak gözükse de yalnızca bir olaydan ibaret olmadığını hatta bağlam,
       kapsam ve ortamla birlikte olgu olduğunu görebiliriz. İnsanlar, yaşadığı
       ortama ve bağlama göre şekil alır. Bu şekil alma konusunda ortamı
-      bağlamdan koparmak mümkün olmadığını görürüz. Yapılan bir tercih, pek çok
+      bağlamdan koparmanın mümkün olmadığını görürüz. Yapılan bir tercih, pek çok
       kişinin yaşamında olumlu veya olumsuz sonuçlar bırakır. Bu tür kararların
       en az zararla sonuçlanması adına, demokratik bir ortamda akademisyenler
       ile tartışılıp öğrencilere danışılması gerekir. Fikirler tartışılıp
