--- a/content/reklam-sponsorluk.html
+++ b/content/reklam-sponsorluk.html
@@ -272,7 +272,7 @@ type="page"
                         <input name="a-reklam-1-aylik" id="checkbox_a1" type="checkbox" class="custom-control-input" value="350"> 
                         <label for="checkbox_a1" class="custom-control-label">1 Ay (350 TL)</label></div>
                         <div class="custom-control custom-checkbox">
-                        <input name="a-reklam-3-aylik" id="checkbox_a3" type="checkbox" class="custom-control-input" value="350"> 
+                        <input name="a-reklam-3-aylik" id="checkbox_a3" type="checkbox" class="custom-control-input" value="8400"> 
                         <label for="checkbox_a3" class="custom-control-label">3 Ay (840 TL)</label><br><small class="text-muted">%20 indirimli</small>
                       </div>
                       </div>
@@ -282,7 +282,7 @@ type="page"
                         <input name="b-reklam-1-aylik" id="checkbox_b1" type="checkbox" class="custom-control-input" value="270"> 
                         <label for="checkbox_b1" class="custom-control-label">1 Ay (270 TL)</label></div>
                         <div class="custom-control custom-checkbox">
-                        <input name="b-reklam-3-aylik" id="checkbox_b3" type="checkbox" class="custom-control-input" value="270"> 
+                        <input name="b-reklam-3-aylik" id="checkbox_b3" type="checkbox" class="custom-control-input" value="6480"> 
                         <label for="checkbox_b3" class="custom-control-label">3 Ay (648 TL)</label><br><small class="text-muted">%20 indirimli</small></div>
                       </div>
                       <div class="col-md-3">
@@ -291,7 +291,7 @@ type="page"
                         <input name="c-reklam-1-aylik" id="checkbox_c1" type="checkbox" class="custom-control-input" value="180"> 
                         <label for="checkbox_c1" class="custom-control-label">1 Ay (180 TL)</label></div>
                         <div class="custom-control custom-checkbox">
-                        <input name="c-reklam-3-aylik" id="checkbox_c3" type="checkbox" class="custom-control-input" value="180"> 
+                        <input name="c-reklam-3-aylik" id="checkbox_c3" type="checkbox" class="custom-control-input" value="432"> 
                         <label for="checkbox_c3" class="custom-control-label">3 Ay (432 TL)</label><br><small class="text-muted">%20 indirimli</small></div>
                       </div>
                       <div class="col-md-3">
@@ -300,7 +300,7 @@ type="page"
                         <input name="d-reklam-1-aylik" id="checkbox_d1" type="checkbox" class="custom-control-input" value="75"> 
                         <label for="checkbox_d1" class="custom-control-label">1 Ay (75 TL)</label></div>
                         <div class="custom-control custom-checkbox">
-                        <input name="d-reklam-3-aylik" id="checkbox_d3" type="checkbox" class="custom-control-input" value="75"> 
+                        <input name="d-reklam-3-aylik" id="checkbox_d3" type="checkbox" class="custom-control-input" value="180"> 
                         <label for="checkbox_d3" class="custom-control-label">3 Ay (180 TL)</label><br><small class="text-muted">%20 indirimli</small></div>
                       </div>
                     </div>
@@ -309,8 +309,8 @@ type="page"
                     <label for="file" class="col-3 col-form-label">Reklam Görselini Seçiniz</label> 
                     <div class="col-9"><br>
                       <div class="input-group">
-                        <input id="file" name="file" type="file"  multiple> 
-                        <p>728x90px ve 300x250px reklam görselini, PNG JPG SVG GIF formatında yükleyiniz. 150KB'ı geçmemesi rica olunur. D alanına reklam verenlerin 728x90 px reklam görselini göndermelerine gerek yoktur.</p>
+                        <input id="file" name="file" type="file"> 
+                        <p>Zip veya Rar dosyası olarak 2 reklam görselini bir araya getirerek yükleyiniz. 728x90px ve 300x250px reklam görselini, PNG JPG SVG GIF formatında yükleyiniz. 150KB'ı geçmemesi rica olunur. D alanına reklam verenlerin 728x90 px reklam görselini göndermelerine gerek yoktur.</p>
                       </div>
                     </div>
                   </div>
