--- a/content/dergi/sayi-7/ikonik-koltuklar/index.html
+++ b/content/dergi/sayi-7/ikonik-koltuklar/index.html
@@ -100,7 +100,7 @@ tags= ["ana sayfa", "dergi"]
 
    <p>{{<img src="paimio-chair-mekan-ikonik-koltuklar.jpg" >}}</p>
 
-   <hr >}}
+   <hr >
    <h2>Swan Chair</h2>
    <div class="row">
       <div class="col-md-6">
@@ -150,7 +150,7 @@ tags= ["ana sayfa", "dergi"]
    <div class="row">
       <div class="offset-md-3 col-md-6 mt-5 mb-5">
          <video width="100%" height="100%" loop autoplay>
-            <source src="https://wwww.markut.net/sayi-7/ikonik-tasarimlar-koltuk/fh_film_swan-christianshavn_1600x900-final-mp4.mp4" >}}
+            <source src="https://www.markut.net/sayi-7/ikonik-tasarimlar-koltuk/fh_film_swan-christianshavn_1600x900-final-mp4.mp4" >}}
          </video>
       </div>
    </div>
