--- a/content/dergi/sayi-7/futurizm/index.html
+++ b/content/dergi/sayi-7/futurizm/index.html
@@ -19,7 +19,7 @@ tags= ["ana sayfa", "dergi"]
          20. Yüzyılın başlarında İtalya&#39;da ortaya çıkan ve 19. Yüzyıl
          Romantizm&#39;inin yükünden kurtulup endüstrileşme ile nükseden makine,
          hız, enerji, teknoloji, gürültü, şiddet, gençlik, endüstri, kaos gibi
-         kavramları yücelten sanatsal ve sosyal
+         kavramları yücelten sanatsal ve sosyal harekettir.
       </li>
       <li><p>Gelecekçilik.</p></li>
    </ol>
@@ -32,7 +32,7 @@ tags= ["ana sayfa", "dergi"]
             katı bir şekilde bağlı kalmasından kaynaklandığını savundu.
             Müzeler-mezarlıklar analojisini yaptığı Fütürizm Manifestosu&#39;nu
             20 Şubat 1909&#39;da Birinci Dünya Savaşına yıllar kala
-            İtalya&#39;nın çok okunan gazetelerinden biri olan Figaro da
+            İtalya&#39;nın çok okunan gazetelerinden biri olan Figaro'da
             yayımladı.
          </p>
          <blockquote>
@@ -109,7 +109,7 @@ tags= ["ana sayfa", "dergi"]
    <p>
       &quot;İtalya&#39;da Fütürizm, Birinci Dünya Savaşı&#39;yla birlikte son
       bulmuştur. Bu sonda savaşın bir tür hijyen olduğunu savunan fütüristlerin
-      bazılarının savaşta ölmesinin etkisi vardır.&quot; [2] 🙂
+      bazılarının savaşta ölmesinin etkisi vardır.&quot; [2]
    </p>
    <p>
       &quot;Fütüristler, resim, heykel, seramik, grafik tasarım, endüstriyel
@@ -348,7 +348,7 @@ tags= ["ana sayfa", "dergi"]
                alt="The Turning Torso in Malmö by Santiago Calatrava, 2005"
             >}}
          </p>
-         <p>The Turning Torso in Malmö by Santiago Calatrava, 2005</p>
+         <p>Malmö’deki Turning Torso. Mimar Santiago Calatrava, 2005.</p>
       </div>
    </div>
 
@@ -588,7 +588,9 @@ tags= ["ana sayfa", "dergi"]
       </div>
    </div>
 
-   <hr >
+<br><br>
+   <p>Sizler düşüncelerine katılmadığınız, yaptıklarını onaylamadığınız birinin eserlerine nasıl yaklaşıyorsunuz? Yazıyı okurken sözü geçen kişilerin düşüncelerini aklından çıkaramayanlardan mısınız, yoksa ayrı tutabiliyor musunuz? <a href="https://www.markut.net/sayi-7/yorumlar/">Yorumlarda tartışabiliriz. ↗</a></p>
+   <br><br><hr >
    <button
       class="btn markutbtn"
       data-target="#my-collapse"
