illustrasyonlar ve küçük yazım hataları

--- a/content/dergi/sayi-6/malzeme-seramik/index.html
+++ b/content/dergi/sayi-6/malzeme-seramik/index.html
@@ -4,12 +4,12 @@ description=""
 url="sayi-6/tasarimda-malzeme-seramik"
 aciklama="Seramik günlük yaşantımızda evimizin pek çok yerinde ortaya çıkan bir ürün malzemesi olmaktan kaçamıyor. Akşam yemeklerimizde tamamlayıcı bir görsel etki yaratan tabaklarımızda veya her gün suladığımız çiçeklerimizde dekoratif bir etki yaratan saksılarımızda seramiği sıkça görmek mümkün."
 type="sayfa"
-thumb=""
+thumb="/img/tasarimda-seramik-thumbnail.jpg"
 date = "2021-02-05"
 sayi=["06"]
 sayfa="02"
 yazar=["eylul ecem sogutlu"]
-tags= ["ana sayfa", "dergi"]
+tags= ["ana sayfa", "dergi", "tasarimda malzeme"]
 +++
 
 <div class="container">
