--- a/content/dergi/sayi-7/futurizm/index.html
+++ b/content/dergi/sayi-7/futurizm/index.html
@@ -9,7 +9,7 @@ date = "2021-03-02"
 sayi=["07"]
 sayfa="03"
 yazar=["hilal doruk"]
-tags= ["ana sayfa", "dergi"]
+tags= ["ana sayfa", "dergi", "sanat akimi"]
 +++
 
 <div class="container">
