--- a/content/dergi/sayi-7/ikonik-koltuklar/index.html
+++ b/content/dergi/sayi-7/ikonik-koltuklar/index.html
@@ -9,7 +9,7 @@ date = "2021-03-02"
 sayi=["07"]
 sayfa="06"
 yazar=["zeynep dag"]
-tags= ["ana sayfa", "dergi"]
+tags= ["ana sayfa", "dergi", "ikonik"]
 +++
 
 <div class="container">
@@ -45,7 +45,7 @@ tags= ["ana sayfa", "dergi"]
             aynı zamanda mimarı olduğu <strong>Paimio Sanatorium</strong>’u için
             özel olarak tasarladığı ikonik bir üründür. <strong>Aalto</strong>,
             Tüberküloz hastalarının tedavisi için kullanılacak
-            <strong>Paimio Sanatoryum</strong>’unun her detayı hastaların
+            <strong>Paimio Sanatoryum</strong>’unun her detayını hastaların
             ihtiyaçlarına göre tasarlamıştır.
          </p>
          <p>
