--- a/content/dergi/sayi-7/katalin-malzeme/index.html
+++ b/content/dergi/sayi-7/katalin-malzeme/index.html
@@ -9,7 +9,7 @@ date = "2021-03-02"
 sayi=["07"]
 sayfa="04"
 yazar=["zeynep yarar"]
-tags= ["ana sayfa", "dergi"]
+tags= ["ana sayfa", "dergi", "tasarimda malzeme"]
 +++
 
 <div class="container">
@@ -175,7 +175,7 @@ tags= ["ana sayfa", "dergi"]
             verdi. Bu yeni keşif malzemeden; yüz binlerce neşeli, renkli ve
             enerjik masa üstü radyolar yapıldı. Birçok model, farklı renk
             kombinasyonları ile tercihe sunuldu. 1930&#39;larda
-            <em>15 dolardan</em> alıcı bulularken bugün, koleksiyoncular
+            <em>15 dolardan</em> alıcı bulurken bugün, koleksiyoncular
             tarafından çok aranıyorlar. Ama ne yazık ki,
             <em>kayıplar.. Kayboldular.. Yok oldular..</em>
          </p>
