--- a/content/dergi/sayi-7/tasarim-sozlugu-persona/index.html
+++ b/content/dergi/sayi-7/tasarim-sozlugu-persona/index.html
@@ -9,7 +9,7 @@ date = "2021-03-02"
 sayi=["07"]
 sayfa="05"
 yazar=["goksu gokturk"]
-tags= ["ana sayfa", "dergi"]
+tags= ["ana sayfa", "dergi", "tasarim sozlugu"]
 +++
 
 <div class="container">
@@ -45,7 +45,7 @@ tags= ["ana sayfa", "dergi"]
    Tasarım sürecinde sorunu çözerken bu sorunu <em>niye</em> ve
    <em>kime</em> yapıldığını bilerek kullanıcı ile maksimum empati kurulur;
    sorunu detaylandırarak soruna doğru çözümün tasarlanabilmesine yardımcı olan
-   bir araçtır. Empati buradaki çok bir önemli husustur. Kullanıcının bir günlük
+   bir araçtır. Empati buradaki önemli bir husustur. Kullanıcının bir günlük
    yaşamındaki alışkanlıklar, istekleri, ihtiyaçlar ve yaşadığı sorunlar
    <em>anlaşılır</em>. Kullanıcının istedikleri sonuçları elde etmelerine
    yardımcı olacak çözümler oluşturulur, bunlara göre ürünler veya hizmetler
