--- a/content/reklam-sponsorluk.html
+++ b/content/reklam-sponsorluk.html
@@ -310,7 +310,7 @@ type="page"
                     <div class="col-9"><br>
                       <div class="input-group">
                         <input id="file" name="file" type="file"> 
-                        <p>Zip veya Rar dosyası olarak 2 reklam görselini bir araya getirerek yükleyiniz. 728x90px ve 300x250px reklam görselini, PNG JPG SVG GIF formatında yükleyiniz. 150KB'ı geçmemesi rica olunur. D alanına reklam verenlerin 728x90 px reklam görselini göndermelerine gerek yoktur.</p>
+                        <p>Zip veya Rar dosyası olarak 2 reklam görselini bir araya getirerek yükleyiniz. 728x90px ve 300x250px reklam görselini; PNG, JPG, SVG veya GIF formatında yükleyebilirsiniz. Dosya Boyutlarının 250KB'ı geçmemesi rica olunur. D alanına reklam verenlerin 728x90 px reklam görselini göndermelerine gerek yoktur.</p>
                       </div>
                     </div>
                   </div>
